hydroflow/tests/snapshots/surface_stratum__difference_a@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_stratum.rs
expression: df.meta_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#02f,color:#fff,stroke:#000
classDef pushClass fill:#ff0,stroke:#000
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    3v1[\"(3v1) <tt>source_iter([1, 3, 5, 7])</tt>"/]:::pullClass
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    2v1[\"(2v1) <tt>source_iter([1, 2, 3, 4])</tt>"/]:::pullClass
    1v1[\"(1v1) <tt>difference()</tt>"/]:::pullClass
    4v1[/"(4v1) <tt>for_each(|x| output_inner.borrow_mut().push(x))</tt>"\]:::pushClass
    2v1--pos--->1v1
    1v1--->4v1
    subgraph sg_2v1_var_a ["var <tt>a</tt>"]
        1v1
    end
end
3v1--->5v1
5v1["(5v1) <tt>handoff</tt>"]:::otherClass
5v1==neg===o1v1

