hydroflow/tests/snapshots/surface_stratum__tick_loop_1@graphvis_dot.snap
---
source: hydroflow/tests/surface_stratum.rs
expression: df.serde_graph().unwrap().to_dot()
---
digraph {
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n4v1 [label="(n4v1) next_tick()", fontname=Monaco, shape=parallelogram, style = filled, color = "#ddddff"]
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 0"
        n3v1 [label="(n3v1) source_iter([1, 3])", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n5v1 [label="(n5v1) map(| x | 2 * x)", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n1v1 [label="(n1v1) merge()", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n2v1 [label="(n2v1) tee()", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n6v1 [label="(n6v1) for_each(| x | output_inner.borrow_mut().push(x))", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n3v1 -> n1v1 [label="0"]
        n5v1 -> n1v1 [label="1"]
        n1v1 -> n2v1
        n2v1 -> n6v1 [label="1"]
    }
    subgraph "cluster n3v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1\nstratum 1"
        n9v1 [label="(n9v1) identity()", fontname=Monaco, shape=parallelogram, style = filled, color = "#ddddff"]
    }
    n2v1 -> n8v1 [label="0"]
    n4v1 -> n7v1
    n7v1 [label="(n7v1) handoff", fontname=Monaco, shape=parallelogram, style = filled, color = "#ddddff"]
    n7v1 -> n5v1
    n8v1 [label="(n8v1) handoff", fontname=Monaco, shape=parallelogram, style = filled, color = "#ddddff"]
    n8v1 -> n9v1
    n9v1 -> n10v1
    n10v1 [label="(n10v1) handoff", fontname=Monaco, shape=parallelogram, style = filled, color = "#ddddff"]
    n10v1 -> n4v1
}

